optimizate SEO setting

--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: Chao28661`s Blog
-subtitle: ''
-description: ''
+subtitle: 'Blog by Chao28661'
+description: 'This is Chao28661`s Blog'
 keywords: Chao28661`s Blog
 author: Chao28661
 language: en
