--- a/themes/cactus/_config.yml
+++ b/themes/cactus/_config.yml
@@ -18,6 +18,7 @@ nav:
   about: /about/
   articles: /archives/
   projects: https://github.com/Charlie28661
+  
 
 
 # Links to your social media accounts.
@@ -36,7 +37,7 @@ social_links:
 
 # Customize the overview with displaying a tagcloud on the index page.
 # Options: https://hexo.io/docs/helpers.html#tagcloud
-tags_overview: false
+tags_overview: true
 
 # Customize the overview with the most recent blog posts on the index page.
 # Options:
@@ -44,8 +45,8 @@ tags_overview: false
 #   - post_count: whether to show only the x most recent posts.
 #   - sort_updated: sort posts by last modification date instead of creation date.
 posts_overview:
-  show_all_posts: false
-  post_count: 20
+  show_all_posts: true
+  post_count: 5
   sort_updated: false
 
 # Customize the archive view.
