--- a/themes/cactus/_config.yml
+++ b/themes/cactus/_config.yml
@@ -96,7 +96,7 @@ logo:
   height: 50
   url: /images/logo.png
   gravatar: false
-  grayout: true
+  grayout: false
 
 # Customize the favicons.
 # Cactus supports a limited set of the three most important icons:
@@ -109,13 +109,16 @@ logo:
 #   - gravatar: whether to create a favicon from your Gravatar
 favicon:
   desktop:
-    url: /images/favicon.ico
+    #url: /images/favicon.ico
+    url: /images/logo.png
     gravatar: false
   android:
-    url: /images/favicon-192x192.png
+    #url: /images/favicon-192x192.png
+    url: /images/logo.png
     gravatar: false
   apple:
-    url: /images/apple-touch-icon.png
+    #url: /images/apple-touch-icon.png
+    url: /images/logo.png
     gravatar: false
 
 # The color scheme that should be used to highlight codeblocks.
